Fixed a precentage formating issue with the prediction. I forgot to multiply by 100.

--- a/templates/index.html
+++ b/templates/index.html
@@ -113,7 +113,7 @@
             Place holder
         
         {% else %}
-            There is {{ prediction }}% of chance that you will have a stroke.
+            There is {{ prediction * 100 }}% of chance that you will have a stroke.
         {% endif %}
 
     </div>
